--- a/service/templates/service/service.html
+++ b/service/templates/service/service.html
@@ -1,24 +1,21 @@
-<h1> 복지/혜택 API</h1>
-
-<form class="d-flex" action="{% url 'service:api_service_search' %}" method="GET">
-    {% csrf_token %}
-    <input name="q" class="form-control me-2" type="search" placeholder="search in naver" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">🔍</button>
-</form>
+<h1> 복지/혜택 API</h1><br>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <div class="body">
     {% for data in datas %}
-    <div class="container">
-        <div class="sub">
+    <div class="card">
+        <div class="card-body">
             <h2>분야: {{data.서비스분야}}</h2><br>
+            <h5>서비스명: {{data.서비스명}}</h5>
             <a href="{{data.상세조회URL}}">상세정보 조회(외부 페이지)</a>
             <br>
+            지원대상: {{data.지원대상}}<br><br>
             신청기한: {{data.신청기한}}<br><br>
-            {{data.선정기준}}<br><br>
+            선정기준: {{data.선정기준}}<br><br>
+            신청방법: {{data.신청방법}}
             <details>
                 <summary>서비스 목적</summary>
                 {{data.서비스목적요약}}
             </details><br>
-            신청방법: {{data.신청방법}}
         </div>
     </div>
     {% endfor %}
